[package]
name = "rust-yew-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = "0.3.65"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.76"
rand = "0.8"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
serde = "1.0.192"
serde_json = "1.0.108"
